The view's selection selectStart and selectEnd are KateSuperCursors meaning that they have super-cow power. They are updated *automatically* when text is inserted or removed. A KateSuperCursor inserts itself into the document's super cursor list. In KateDocument::editRemove/InsertText there is a loop over all super cursors to keep them in sync.

The 'un/comment' functions tried to adapt the super cursors themselves,
although they were already updated. This resulted in negative columns, which
somewhere wrapped around in a uint-conversion, which then set an insane
selection, moo. This fixes the crash reported in bug #137555.

Review and testing welcome! ;)

CCMAIL:kwrite-devel@kde.org
BUG:137555

svn path=/branches/KDE/3.5/kdelibs/; revision=607385